--- a/assets/helix/config.toml
+++ b/assets/helix/config.toml
@@ -3,3 +3,12 @@ theme = "catppuccin_macchiato"
 [editor]
 shell = ["fish", "-c"]
 line-number = "relative"
+
+[keys.normal]
+C-y = [
+  ':sh rm -f /tmp/unique-file',
+  ':insert-output yazi %{buffer_name} --chooser-file=/tmp/unique-file',
+  ':insert-output echo "\x1b[?1049h\x1b[?2004h" > /dev/tty',
+  ':open %sh{cat /tmp/unique-file}',
+  ':redraw',
+]
