--- a/assets/starship.toml
+++ b/assets/starship.toml
@@ -61,10 +61,12 @@ format = '\[[$symbol$branch]($style)\]'
 format = '\[[$symbol$account(@$domain)(\($region\))]($style)\]'
 
 [git_branch]
-format = '\[[$symbol$branch]($style)\]'
+# format = '\[[$symbol$branch]($style)\]'
+disabled = true
 
 [git_status]
-format = '([\[$all_status$ahead_behind\]]($style))'
+# format = '([\[$all_status$ahead_behind\]]($style))'
+disabled = true
 
 [golang]
 format = '\[[$symbol($version)]($style)\]'
